--- a/src/components/performance/main.scss
+++ b/src/components/performance/main.scss
@@ -1,5 +1,5 @@
 @import '../../scss/imports/_colors',
-'../../scss/imports/_variables',
-'../../../bower_components/infra/dist/mixins/mixins';
+        '../../scss/imports/_variables',
+        '../../../bower_components/infra/dist/mixins/mixins';
 
-@import "directives/performanceTimeline/_performance-timeline";
+@import 'directives/performanceTimeline/_performance-timeline';
