--- a/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
+++ b/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
@@ -1,129 +1,101 @@
 <div class="base-complete-exercise-container"
      translate-namespace="COMPLETE_EXERCISE_ACT.COMPLETE_EXERCISE_SUMMARY"
-     subject-id-to-attr-drv="$ctrl.currentSubjectId"
-     ng-class="{
-        'workout-summary-wrapper-essay': $ctrl.isEssaySubject
-     }">
+     subject-id-to-attr-drv="$ctrl.currentSubjectId">
+
     <complete-exercise-header></complete-exercise-header>
+
     <social-sharing
-        subject-id="::$ctrl.exerciseContent.subjectId"
+        subject-id="::$ctrl.currentSubjectId"
         animate="true">
     </social-sharing>
+
     <section>
         <div class="test-score-title">{{::$ctrl.testScoreTitle}}</div>
+
         <div class="gauge-row-wrapper">
             <div class="overflowWrap">
                 <div class="gauge-wrap">
-                    <div class="gauge-inner-text">{{::$ctrl.performanceChart.successRate}}%
+                    <div class="gauge-inner-text">{{::$ctrl.gaugeSuccessRate}}%
                         <div class="success-title" translate=".SUCCESS"></div>
                     </div>
-                    <canvas width="134"
-                            height="134"
-                            id="doughnut"
-                            class="chart chart-doughnut"
-                            chart-options="$ctrl.performanceChart.gaugeSettings.options"
-                            chart-colours="$ctrl.performanceChart.gaugeSettings.colours"
-                            chart-data="$ctrl.performanceChart.gaugeSettings.data"
-                            chart-labels="$ctrl.performanceChart.gaugeSettings.labels"
-                            chart-legend="false">
+                    <canvas
+                        id="doughnut"
+                        class="chart chart-doughnut"
+                        chart-options="$ctrl.performenceChart.options"
+                        chart-colours="$ctrl.performenceChart.colours"
+                        chart-data="$ctrl.performenceChart.data"
+                        chart-labels="$ctrl.performenceChart.labels"
+                        chart-legend="false">
                     </canvas>
                 </div>
                 <div class="statistics">
                     <div class="stat-row">
-                        <div class="stat-val correct">{{::$ctrl.exerciseResult.correctAnswersNum}}</div>
+                        <div class="stat-val correct">{{::$ctrl.results.correctAnswersNum}}</div>
                         <div class="title" translate=".CORRECT"></div>
-                        <div class="avg-score">
-                            <span translate=".AVG_TIME"
-                                  translate-values="{
-                                    avgTime: $ctrl.statsTime.correctAvgTime
-                                  }">
-                            </span>
-                        </div>
+                        <div class="avg-score"><span translate=".AVG"></span>. {{::$ctrl.avgTime.correctAvgTime}} <span translate=".SEC"></span> </div>
                     </div>
+
                     <div class="stat-row">
-                        <div class="stat-val wrong">{{::$ctrl.exerciseResult.wrongAnswersNum}}</div>
+                        <div class="stat-val wrong">{{::$ctrl.results.wrongAnswersNum}}</div>
                         <div class="title" translate=".WRONG"></div>
-                        <div class="avg-score">
-                            <span translate=".AVG_TIME"
-                                  translate-values="{
-                                    avgTime: $ctrl.statsTime.wrongAvgTime
-                                  }">
-                            </span>
-                        </div>
+                        <div class="avg-score"><span translate=".AVG"></span>. {{::$ctrl.avgTime.wrongAvgTime}} <span translate=".SEC"></span></div>
                     </div>
+
                     <div class="stat-row">
-                        <div class="stat-val skipped">{{::$ctrl.exerciseResult.skippedAnswersNum}}</div>
+                        <div class="stat-val skipped">{{::$ctrl.results.skippedAnswersNum}}</div>
                         <div class="title" translate=".SKIPPED"></div>
-                        <div class="avg-score">
-                            <span translate=".AVG_TIME"
-                                  translate-values="{
-                                    avgTime: $ctrl.statsTime.skippedAvgTime
-                                  }">
-                            </span>
-                        </div>
+                        <div class="avg-score"><span translate=".AVG"></span>. {{::$ctrl.avgTime.skippedAvgTime}}  <span translate=".SEC"></span></div>
                     </div>
                 </div>
             </div>
 
             <div class="category-name">{{$ctrl.categoryName | cutString: 42}}</div>
         </div>
-        <div class="review-btn-wrapper">
-            <md-button class="md-primary znk"
-                       autofocus
-                       tabindex="1"
-                       md-no-ink
-                       ng-cloak
-                       ng-click="$ctrl.goToSummary()">
-                <span translate=".REVIEW"></span>
-            </md-button>
-        </div>
+
+        <button autofocus tabindex="1"
+                class="review-button md-button primary"
+                translate=".REVIEW"
+                ui-sref="^.exercise"></button>
     </section>
-    <section class="time-line-wrapper2"
-             ng-class="{
-                'seen-summary': $ctrl.seenSummary
-             }">
-        <div class="estimated-score-title">
-            <span translate="SUBJECTS.{{$ctrl.exerciseContent.subjectId}}"></span>
-            <span translate=".ESTIMATED_SCORE"></span></div>
+
+    <section class="time-line-wrapper2"  ng-class="{'seen-summary': $ctrl.seenSummary}">
+
+        <div class="estimated-score-title">{{$ctrl.subjectName}} <span translate=".ESTIMATED_SCORE"></span> </div>
         <performance-timeline
-            on-timeline-finish="$ctrl.onTimelineFinish(subjectDelta)"
-            subject-id="{{::$ctrl.exerciseContent.subjectId}}"
-            active-exercise-id="::$ctrl.exerciseContent.id">
+            on-timeline-finish="vm.onTimelineFinish(subjectDelta)"
+            subject-id="{{::$ctrl.currentSubjectId}}"
+            active-exercise-id="::$ctrl.activeExerciseId">
         </performance-timeline>
     </section>
 
-    <section class="proficiency-level-row animate-if" ng-if="$ctrl.notSeenSummary">
+
+    <section class="proficiency-level-row animate-if" ng-if="!$ctrl.seenSummary">
         <div class="proficiency-title-row" translate=".MASTERY_LEVEL"></div>
         <div class="row data-row">
             <div class="subject-level">
-                <div class="test-score-name">{{::$ctrl.testScoreMastery.testScorename}}</div>
+                <div class="subject-name">{{$ctrl.subjectName}}</div>
                 <div class="subject-progress">
                     <div class="progress">
-                        <div znk-progress-bar progress-width="{{::$ctrl.testScoreMastery.progress}}"
-                             show-progress-value="false"></div>
-                        <div class="title" translate=".MASTERY"></div>
+                        <div znk-progress-bar progress-width="{{$ctrl.performanceData[$ctrl.currentSubjectId].overall.progress}}" show-progress-value="false"></div>
+                        <span class="title" translate=".MASTERY"></span>
                     </div>
                     <div class="progress-val">
-                        {{::$ctrl.testScoreMastery.progress}}%
-                        <div class="progress-perfect"
-                             ng-class="{
-                                'bad-score': $ctrl.testScoreDelta<0
-                             }"
-                             ng-if="$ctrl.testScoreDelta != 0">
-                            <span ng-if="$ctrl.testScoreDelta > 0">+</span>
-                            {{$ctrl.testScoreDelta | number : 0}}
+                        {{$ctrl.performanceData[$ctrl.currentSubjectId].overall.progress}}%
+                        <div class="progress-perfect" ng-class="{'bad-score': $ctrl.subjectsDelta<0}" ng-if="$ctrl.subjectsDelta != 0">
+                            <span ng-if="$ctrl.subjectsDelta > 0">+</span>
+                            {{$ctrl.subjectsDelta | number : 0}}
                         </div>
                     </div>
 
                 </div>
             </div>
             <div class="category-level-wrap">
-                <div class="category-level" ng-repeat="(key, category) in $ctrl.categoryMastery">
+                <div class="category-level" ng-repeat="(key, generalCategory) in $ctrl.generalCategories">
+
                     <div class="category-data">
-                        <div class="category-level-name">{{category.name}}</div>
-                        <div znk-progress-bar progress-width="{{category.progress}}"
-                             progress-value="{{category.progress}}" show-progress-value="false"></div>
-                        <div class="level">{{category.mastery}}</div>
+                        <div class="category-level-name">{{generalCategory.name}} </div>
+                        <div znk-progress-bar progress-width="{{generalCategory.progress}}" progress-value="{{generalCategory.progress}}" show-progress-value="false"></div>
+                        <div class="level">{{generalCategory.mastery}}</div>
                     </div>
                 </div>
             </div>
