--- a/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
+++ b/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
@@ -30,19 +30,19 @@
                 </div>
                 <div class="statistics">
                     <div class="stat-row">
-                        <div class="stat-val correct">{{::$ctrl.results.correctAnswersNum}}</div>
+                        <div class="stat-val correct">{{::$ctrl.exerciseResults.correctAnswersNum}}</div>
                         <div class="title" translate=".CORRECT"></div>
                         <div class="avg-score"><span translate=".AVG"></span>. {{::$ctrl.avgTime.correctAvgTime}} <span translate=".SEC"></span> </div>
                     </div>
 
                     <div class="stat-row">
-                        <div class="stat-val wrong">{{::$ctrl.results.wrongAnswersNum}}</div>
+                        <div class="stat-val wrong">{{::$ctrl.exerciseResults.wrongAnswersNum}}</div>
                         <div class="title" translate=".WRONG"></div>
                         <div class="avg-score"><span translate=".AVG"></span>. {{::$ctrl.avgTime.wrongAvgTime}} <span translate=".SEC"></span></div>
                     </div>
 
                     <div class="stat-row">
-                        <div class="stat-val skipped">{{::$ctrl.results.skippedAnswersNum}}</div>
+                        <div class="stat-val skipped">{{::$ctrl.exerciseResults.skippedAnswersNum}}</div>
                         <div class="title" translate=".SKIPPED"></div>
                         <div class="avg-score"><span translate=".AVG"></span>. {{::$ctrl.avgTime.skippedAvgTime}}  <span translate=".SEC"></span></div>
                     </div>
