fix summary component

--- a/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
+++ b/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
@@ -19,6 +19,8 @@
                         <div class="success-title" translate=".SUCCESS"></div>
                     </div>
                     <canvas
+                        width="134px"
+                        height="134px"
                         id="doughnut"
                         class="chart chart-doughnut"
                         chart-options="$ctrl.performenceChart.options"
