--- a/src/components/completeExerciseAct/scss/_english-full-paragraphs.scss
+++ b/src/components/completeExerciseAct/scss/_english-full-paragraphs.scss
@@ -37,4 +37,12 @@ english-full-paragraphs{
             }
         }
     }
+
+    .question-wrapper {
+        &.english-full-paragraphs-wrapper{
+            &.question-basic-style{
+                display: flex;
+            }
+        }
+    }
 }
