--- a/src/components/completeExerciseAct/main.scss
+++ b/src/components/completeExerciseAct/main.scss
@@ -4,6 +4,8 @@
 
 @import "scss/_article",
         "scss/_custom-answer-builder",
+        "scss/_english-full-paragraphs",
+        "scss/_english-specific-paragraph",
         "scss/_essay-question",
         "scss/_free-text-answer-drv",
         "scss/_lecture-question",
@@ -13,6 +15,7 @@
         "scss/_select-answer",
         "scss/_shared-question-style",
         "scss/_simple-question",
+        "scss/_science-question",
         "scss/_writing-full-passage",
         "scss/_writing-specific-paragraph",
         "scss/_znk-exercise",
