--- a/src/components/completeExerciseAct/main.scss
+++ b/src/components/completeExerciseAct/main.scss
@@ -18,6 +18,7 @@
         "scss/_science-question",
         "scss/_writing-full-passage",
         "scss/_writing-specific-paragraph",
+        "scss/_writing-question",
         "scss/_znk-exercise",
         "directives/completeExerciseSummary/_complete-exercise-summary",
         "directives/socialSharing/_social-sharing";
