--- a/src/components/completeExerciseAct/templates/englishFullParagraphs.template.html
+++ b/src/components/completeExerciseAct/templates/englishFullParagraphs.template.html
@@ -2,14 +2,14 @@
 
 <div class="question-wrapper english-full-paragraphs-wrapper question-basic-style">
 
-    <div class="question-container znk-scrollbar">
+    <div class="question-container znk-scrollbar" znk-exercise-draw-container canvas-name="question">
         <div class="paragraph-title"></div>
 
         <div class="paragraphs-wrapper"></div>
 
     </div>
 
-    <div class="answer-container znk-scrollbar">
+    <div class="answer-container znk-scrollbar" znk-exercise-draw-container canvas-name="answer">
         <div class="question-content"></div>
         <answer-builder></answer-builder>
     </div>
