--- a/src/components/completeExerciseAct/templates/lectureQuestion.template.html
+++ b/src/components/completeExerciseAct/templates/lectureQuestion.template.html
@@ -1,4 +1,4 @@
-<div class="lecture-question-wrapper" ng-switch="vm.question.typeId">
+<div class="lecture-question-wrapper" ng-switch="vm.question.typeId" znk-exercise-draw-container canvas-name="lecture">
     <div class="img-wrapper" ng-switch-when="1">
         <img  ng-src="{{vm.question.fileUrl}}">
     </div>
