changed to showInduction and added it to summary

--- a/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
+++ b/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
@@ -72,6 +72,7 @@
         <performance-timeline
             on-timeline-finish="vm.onTimelineFinish(subjectDelta)"
             subject-id="{{::$ctrl.currentSubjectId}}"
+            show-induction="true"
             active-exercise-id="::$ctrl.activeExerciseId">
         </performance-timeline>
     </section>
