Oren/performance specific (#12)
* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

--- a/src/components/completeExerciseAct/scss/_science-question.scss
+++ b/src/components/completeExerciseAct/scss/_science-question.scss
@@ -1,7 +1,7 @@
 science-question {
     .science-question-wrapper {
         display: flex;
-
+        font-family: Lato;
         .question-container {
             padding: {
                 left: 25px;
