--- a/src/components/completeExerciseAct/scss/_writing-question.scss
+++ b/src/components/completeExerciseAct/scss/_writing-question.scss
@@ -33,3 +33,13 @@ writing-question {
         }
     }
 }
+
+znk-exercise {
+    .question-basic-style {
+        .question-container{
+            font-family: Lato;
+            font-weight: $lightFontWeight;
+            line-height: 24px;
+        }
+    }
+}
