Oren/act sprint 8 (#14)
* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

* performance service

--- a/src/components/completeExerciseAct/scss/_reading-question.scss
+++ b/src/components/completeExerciseAct/scss/_reading-question.scss
@@ -4,6 +4,7 @@ reading-question {
 
     .reading-question-wrapper {
         display: flex;
+        font-family: Lato;
 
         .question-container {
             padding-left: 35px;
