aria-label fix (#20)

--- a/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
+++ b/src/components/completeExerciseAct/directives/completeExerciseSummary/completeExerciseSummaryDirective.template.html
@@ -59,6 +59,7 @@
 
         <div class="review-btn-wrapper">
             <md-button class="md-primary znk"
+                       aria-label="{{'COMPLETE_EXERCISE_ACT.COMPLETE_EXERCISE_SUMMARY.REVIEW' | translate}}"
                        tabindex="1"
                        md-no-ink
                        ng-cloak
