--- a/src/components/completeExerciseAct/scss/_znk-exercise.scss
+++ b/src/components/completeExerciseAct/scss/_znk-exercise.scss
@@ -47,6 +47,17 @@ znk-exercise {
             bottom-right-radius: 15px;
         }
     }
+
+    question-builder.answer-explanation-open{
+        .question-basic-style{
+            overflow: auto;
+            height: calc(100vh - 570px);
+
+            canvas{
+                height: calc(100vh - 570px);
+            }
+        }
+    }
 }
 
 .workout-roadmap-tutorial-intro {
