--- a/src/components/completeExerciseAct/directives/completeExerciseSummary/_complete-exercise-summary.scss
+++ b/src/components/completeExerciseAct/directives/completeExerciseSummary/_complete-exercise-summary.scss
@@ -193,6 +193,10 @@ complete-exercise-summary{
                             }
                         }
                     }
+
+                    .subject-name{
+                        text-transform: capitalize;
+                    }
                 }
 
                 .category-level-wrap {
