--- a/src/components/completeExerciseAct/scss/_writing-question.scss
+++ b/src/components/completeExerciseAct/scss/_writing-question.scss
@@ -23,6 +23,7 @@ writing-question {
             }
 
             answer-builder{
+                margin-top: 20px;
                 .rate-answer-wrapper{
                     .item-repeater:last-child{
                         width: 26px;
