science-specific-paragraph (#60)

--- a/src/components/completeExerciseAct/main.scss
+++ b/src/components/completeExerciseAct/main.scss
@@ -6,6 +6,7 @@
         "scss/_custom-answer-builder",
         "scss/_english-full-paragraphs",
         "scss/_english-specific-paragraph",
+        "scss/_science-specific-paragraph",
         "scss/_essay-question",
         "scss/_free-text-answer-drv",
         "scss/_lecture-question",
